--- a/PhysXEngine/PhysicsEngine/PhysicsEngine.vcxproj
+++ b/PhysXEngine/PhysicsEngine/PhysicsEngine.vcxproj
@@ -80,13 +80,28 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\App.cpp" />
+    <ClCompile Include="Source\Camera\Camera.cpp" />
+    <ClCompile Include="Source\Camera\MobileCamera.cpp" />
+    <ClCompile Include="Source\RigidBody.cpp" />
+    <ClCompile Include="Source\Sphere.cpp" />
+    <ClCompile Include="Source\Giz_core\Gizmos.cpp" />
+    <ClCompile Include="Source\Giz_core\gl_core_4_4.c" />
     <ClCompile Include="Source\main.cpp" />
+    <ClCompile Include="Source\PhysicsScene.cpp" />
+    <ClCompile Include="Source\NewtonsThirdLaw.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\App.h" />
+    <ClInclude Include="Source\Camera\Camera.h" />
+    <ClInclude Include="Source\Camera\MobileCamera.h" />
+    <ClInclude Include="Source\Giz_core\Gizmos.h" />
+    <ClInclude Include="Source\Giz_core\gl_core_4_4.h" />
     <ClInclude Include="Source\PhysicsObject.h" />
     <ClInclude Include="Source\PhysicsScene.h" />
     <ClInclude Include="Source\RigidBody.h" />
     <ClInclude Include="Source\Sphere.h" />
+    <ClInclude Include="Source\NewtonsThirdLaw.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
